--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -17,6 +17,7 @@
         "API Library Apex Adyen": "0Ho4T0000000043SAA",
         "API Library Apex Adyen@0.1.0-1": "04t4T000001VvbqQAC",
         "API Library Apex Adyen@1.0.0-0": "04t4T000001VvfJQAS",
-        "API Library Apex Adyen@2.0.0-0": "04t4T000001HohPQAS"
+        "API Library Apex Adyen@2.0.0-0": "04t4T000001HohPQAS",
+        "API Library Apex Adyen@3.0.0-0": "04t4T000001y7BWQAY"
     }
 }
