feat: updating patch version number

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,23 +1,24 @@
 {
-    "packageDirectories": [
-        {
-            "path": "force-app",
-            "default": true,
-            "package": "API Library Apex Adyen",
-            "versionName": "ver 0.1",
-            "versionNumber": "0.1.0.NEXT",
-            "ancestorVersion": "HIGHEST"
-        }
-    ],
-    "name": "adyen-apex-api-lib-2GP",
-    "namespace": "adyen_payment",
-    "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "53.0",
-    "packageAliases": {
-        "API Library Apex Adyen": "0Ho4T0000000043SAA",
-        "API Library Apex Adyen@0.1.0-1": "04t4T000001VvbqQAC",
-        "API Library Apex Adyen@1.0.0-0": "04t4T000001VvfJQAS",
-        "API Library Apex Adyen@2.0.0-0": "04t4T000001HohPQAS",
-        "API Library Apex Adyen@3.0.0-0": "04t4T000001y7BWQAY"
+  "packageDirectories": [
+    {
+      "path": "force-app",
+      "default": true,
+      "package": "API Library Apex Adyen",
+      "versionName": "ver 3.0",
+      "versionNumber": "3.0.1.NEXT",
+      "ancestorVersion": "HIGHEST"
     }
+  ],
+  "name": "adyen-apex-api-lib-2GP",
+  "namespace": "adyen_payment",
+  "sfdcLoginUrl": "https://login.salesforce.com",
+  "sourceApiVersion": "59.0",
+  "packageAliases": {
+    "API Library Apex Adyen": "0Ho4T0000000043SAA",
+    "API Library Apex Adyen@0.1.0-1": "04t4T000001VvbqQAC",
+    "API Library Apex Adyen@1.0.0-0": "04t4T000001VvfJQAS",
+    "API Library Apex Adyen@2.0.0-0": "04t4T000001HohPQAS",
+    "API Library Apex Adyen@3.0.0-0": "04t4T000001y7BWQAY",
+    "API Library Apex Adyen@3.0.1-1": "04tRP0000000A5pYAE"
+  }
 }
