--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,11 +1,11 @@
-{ 
+{
   "packageDirectories": [
     {
       "path": "force-app",
       "default": true,
       "package": "API Library Apex Adyen",
-      "versionName": "ver 3.0",
-      "versionNumber": "3.0.1.NEXT",
+      "versionName": "ver 3.1",
+      "versionNumber": "3.1.0.NEXT",
       "ancestorVersion": "HIGHEST"
     }
   ],
@@ -19,6 +19,7 @@
     "API Library Apex Adyen@1.0.0-0": "04t4T000001VvfJQAS",
     "API Library Apex Adyen@2.0.0-0": "04t4T000001HohPQAS",
     "API Library Apex Adyen@3.0.0-0": "04t4T000001y7BWQAY",
-    "API Library Apex Adyen@3.0.1-1": "04tRP0000000A5pYAE"
+    "API Library Apex Adyen@3.0.1-1": "04tRP0000000A5pYAE",
+    "API Library Apex Adyen@3.1.0-1": "04tRP0000000D25YAE"
   }
 }
