--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @amihajlovski @dcardos @shanikantsingh @shubhamvijaivargiya @zenit2001
+* @amihajlovski @dcardos @shanikantsingh @shubhamk67 @shubhamvijaivargiya @zenit2001
