fix: undeleting classes to avoid OMS upgrade blockage

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -22,6 +22,6 @@
     "API Library Apex Adyen@3.0.1-1": "04tRP0000000A5pYAE",
     "API Library Apex Adyen@3.1.0-1": "04tRP0000000D25YAE",
     "API Library Apex Adyen@3.1.1-1": "04tRP0000000XGvYAM",
-    "API Library Apex Adyen@3.2.0-2": "04tRP0000000j5BYAQ"
+    "API Library Apex Adyen@3.2.0-4": "04tRP0000000lgTYAQ"
   }
 }
